# duroxide-pg

./: .gitkeep  BASELINE_METRICS.txt  CHANGELOG.md  CURRENT_BRANCH_STATE.md  Cargo.toml  LICENSE  QUICK_REFERENCE.txt  README.md  SESSION_COMPLETE.md  STORED_PROC_STATUS.txt  TODO.md
.github/: copilot-instructions.md
.github/workflows/: entra-live-test.yml  test.yml
.paw/work/entra-auth-support/: CodeResearch.md  Docs.md  ImplementationPlan.md  Spec.md  SpecReview.md  WorkflowContext.md
.paw/work/fix-native-tls-reqwest/: CodeResearch.md  Docs.md  ImplementationPlan.md  WorkflowContext.md
docs/: ARCHITECTURE.md  LONG_POLLING_DESIGN.md  MIGRATION_PLAN.md  OPTIMIZED_POLLING.md  PERFORMANCE_ANALYSIS.md  REGION_COMPARISON.md  REMOTE_PERFORMANCE_ANALYSIS.md  SIMPLE_POLLING_DESIGN.md  concurrent-instance-fetch-race.md  dep_issues.md  duroxide-blockers.md  entra-ci.md
migrations/: 0001_initial_schema.sql  0002_create_stored_procedures.sql  0003_add_attempt_count.sql  0004_update_stored_procedures_for_attempt_count.sql  0005_rust_clock_only.sql  0006_enforce_not_null_timestamps.sql  0006_use_rust_timestamps.sql  0007_add_execution_state_support.sql  0008_remove_execution_state.sql  0009_add_activity_cancellation_support.sql  0009_diff.md  0010_add_deletion_and_pruning_support.sql  0010_diff.md  0012_diff.md  0012_require_timestamps.sql  0013_add_capability_filtering.sql  0013_diff.md  0014_add_session_support.sql  0014_diff.md  0015_add_custom_status.sql  0015_diff.md  0016_add_activity_tags.sql  0016_diff.md  0017_diff.md  0017_retry_orchestration_fetch_on_contention.sql  0018_add_kv_store.sql  0018_diff.md  0019_add_kv_last_updated.sql  0019_diff.md  0020_add_kv_delta.sql  0020_diff.md  0021_add_get_instance_stats.sql  0021_diff.md  0022_add_batched_worker_fetch.sql  README.md
pg-stress/: Cargo.toml  README.md
pg-stress/src/: lib.rs
prompts/: QUICK_START.md  README.md  duroxide-blockers.md  duroxide-pg-opt-check-upstream-fixes.md  duroxide-update-sync.md  longpoll-comparison.md  publish-crate.md  release-workflow.md  update-duroxide-dependency.md
scripts/: cleanup_test_schemas.sh  generate_migration_diff.sh  provision_entra_ci_pg.sh  provision_entra_test_pg.sh  run-stress-tests.sh  teardown_entra_ci_pg.sh  teardown_entra_test_pg.sh  test_flaky_detection.sh
src/: db_metrics.rs  entra.rs  fault_injection.rs  lib.rs  migrations.rs  notifier.rs  provider.rs
tests/: basic_tests.rs  cached_plan_retryable_test.rs  concurrent_migration_tests.rs  continue_as_new_stress_tests.rs  db_metrics_tests.rs  e2e_samples.rs  entra_live_test.rs  fault_injection_tests.rs  longpoll_tests.rs  multi_node_tests.rs  native_tls_regression.rs  perf_tests.rs  pg_listener_test.rs  postgres_provider_test.rs  regression_tests.rs  session_e2e_tests.rs  stress_tests.rs  stress_tests_longpoll.rs
tests/common/: mod.rs
