[package]
name = "duroxide-pg-stress"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pg-stress"
path = "src/bin/pg-stress.rs"

[dependencies]
duroxide = { git = "https://github.com/affandar/duroxide.git", branch = "staging", features = ["provider-test"] }
duroxide-pg = { path = ".." }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

